@@ -60,8 +60,8 @@
 
 /*
 #define VIPS_DEBUG_RED
- */
 #define VIPS_DEBUG
+ */
 
 #ifdef HAVE_CONFIG_H
 #include <config.h>
