@@ -116,6 +116,7 @@ typedef struct _VipsBuffer {
 	size_t bsize;		/* Size of private malloc() */
 } VipsBuffer;
 
+void vips_buffer_dump_all( void );
 void vips_buffer_done( VipsBuffer *buffer );
 void vips_buffer_undone( VipsBuffer *buffer );
 void vips_buffer_unref( VipsBuffer *buffer );
