@@ -396,9 +396,8 @@ vips_shutdown( void )
 }
 
 	vips__thread_profile_detach();
-	vips__thread_profile_stop();
-
 	vips__buffer_shutdown();
+	vips__thread_profile_stop();
 
 	/* In dev releases, always show leaks. But not more than once, it's
 	 * annoying.
